# CS163-DocumentEditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Untitled
.github/workflows/: build.yml
assets/fonts/: SVN-Arial.rar
data/dictionary/english/: words.txt
examples/: hello.txt  hello2.txt
include/: raygui.h
include/tinyfiledialogs/: hello.c  hello_wchar_t.c
src/: DocumentFont.cpp  DocumentFont.hpp  FontFactory.cpp  FontFactory.hpp  constants.hpp  cursor.hpp  document.cpp  document.hpp  editor.cpp  editor.hpp  main.cpp  raylib.h  utils.cpp  utils.hpp
src/autocomplete/: suggester.cpp  suggester.hpp
src/dictionary/: dictionary.cpp  dictionary.hpp  test.cpp  trie.cpp  trie.hpp  word.cpp  word.hpp
src/document/: document.cpp  document.hpp  document_structure.cpp  document_structure.hpp
src/keybind/: keybind.cpp  keybind.hpp  node.cpp  node.hpp
src/rope/: node.cpp  node.hpp  node_concatenation.cpp  node_concatenation.hpp  node_leaf.cpp  node_leaf.hpp  rope.cpp  rope.hpp  test.cpp  utils.cpp  utils.hpp
src/search/: search.cpp  search.hpp  test.cpp
src/text/: nchar.cpp  nchar.hpp  nstring.cpp  nstring.hpp  utils.cpp  utils.hpp
